fix text input bug on safari.

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -384,6 +384,10 @@ $b1-font-size: math.div($max-width-font-size, $max-width) * 100vw;
   }
 }
 
+.text_field {
+  user-select: text;
+}
+
 .enter_name_popup {
   background-color: rgba(0, 0, 0, 0.7);
   display: flex;
